bugfix: В FireFox неправильно отобржалась многоколоночная верстка.
Проблема устранилась после удаления css-свойтсва ``column-fill: auto;``

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -197,6 +197,10 @@ $black: #1c1b1d;
     cursor: pointer;
     user-select: none;
   }
+  & .ui.form {
+    column-count: auto !important;
+    column-width: 10rem !important;
+  }
 }
 
 .bmpp-unitGroups {
