--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -35,6 +35,9 @@ $black: #1c1b1d;
     border-bottom: 1px solid $bmppBorderColor;
     border-right: $borderWidth solid transparent!important;
     cursor: pointer;
+    &.disabled {
+      cursor: auto;
+    }
     &--current {
       border-right: $borderWidth solid $bmppBorderColor!important;
       background-color: rgba(250, 250, 250, .75) !important;
@@ -44,12 +47,14 @@ $black: #1c1b1d;
       border-right: $borderWidth solid $grey!important;
       background-color: rgba(250, 250, 250, .75) !important;
     }
+    &--hover.disabled,
+    &--hover&--current.disabled {
+      border-right: $borderWidth solid transparent!important;
+      background-color: transparent!important;
+    }
     & .icon {
       position: absolute;
       right: 1em;
-    }
-    &.disabled {
-      cursor: auto;
     }
   }
   &_searchButton {
