--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -208,6 +208,11 @@ $black: #1c1b1d;
   }
 }
 
+.bmpp-propertyForm {
+  min-height: 8em;
+  margin-bottom: 1em !important;
+}
+
 .bmpp-unitGroups {
   list-style: none;
   margin: 0;
