--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -255,11 +255,6 @@ $black: #1c1b1d;
   }
 }
 
-.bmpp-propertyForm {
-  min-height: 8em;
-  margin-bottom: 1em !important;
-}
-
 .bmpp-unitGroups {
   list-style: none;
   margin: 0;
@@ -311,4 +306,18 @@ $black: #1c1b1d;
 
 .bmpp-negativeNode {
   padding-top: 3.4em!important;
+}
+
+.bmpp-valueList {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+
+  & li {
+    margin-bottom: 0.5em;
+  }
+
+  & .bmpp-valueList {
+    padding: 0.7em 0 0.5em 1.7em;
+  }
 }
