Почти правильное поведение иерархических списков:
* Галочка распространяется на подгалочки; в зависимости от типа
  подсписка выделяются либо все элементы (OR-список), либо первый
  элемент списка (XOR-список); снимаются всегда все подгалочки.
* Подгалочка включает родительскую галочку.
* Снятие всех подгалочек выключает родительскую галочку.
* Формирование списка выбранных значений с учетом типа значения каждой
  галочки (пустое значение, массив значений, одинарное значение).

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -326,3 +326,8 @@ $black: #1c1b1d;
   color: #2c662d;
   padding: 0 0.1em;
 }
+
+.bmpp-editableListItem {
+  display: block !important;
+  margin: 0.7em 0 0 2.4em;
+}
