Кнопки "ок", "очистить", "отмена" при редактировании свойств всегда видны

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -86,6 +86,29 @@ $borderWidth: 0.3em;
   margin: 3em auto auto 6em !important;
 }
 
+.bmpp-propertiesPane {
+  $buttonsHeight: 2.2em;
+  $dividerHeight: 1em;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+
+  &Props {
+    height: calc(100vh - $buttonsHeight - $dividerHeight);
+    overflow-y: scroll;
+    overflow-x: hidden;
+
+  }
+  &Divider {
+    height: $dividerHeight;
+    border-bottom: 1px solid rgba(34, 36, 38, .05);
+  }
+  &Buttons {
+    height: $buttonsHeight;
+    padding: 1em 0 0 6em;
+  }
+}
+
 .bmpp-resultsOptionsPane {
   width: 55em;
   margin: 3em auto auto 6em !important;
