--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -386,3 +386,33 @@ $borderWidth: 0.3em;
 
 .bmpp-bannerPropvalue {
 }
+
+.bmpp-searchResult {
+  width: 100%;
+  display: grid;
+  grid-template-columns: auto 1fr;
+  column-gap: 0.66em;
+  align-items: baseline;
+
+  & .divider {
+    grid-column: 1 / span 2;
+    border: none;
+    border-top: 1px solid $bmppBorderColor;
+    padding: 0.5em 0 0 0;
+    margin: 0.5em 0 0 0;
+  }
+  & .bmpp-unitValue {
+    text-align: right;
+    color: green;
+    font-size: smaller;
+    cursor: pointer;
+  }
+  & .bmpp-transcription {
+    cursor: pointer;
+  }
+  & .bmpp-context {
+    color: grey;
+    cursor: auto !important;
+  }
+}
+
