--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -75,6 +75,16 @@ $borderWidth: 0.3em;
       position: absolute;
       right: 1em;
     }
+    & .label {
+      position: absolute;
+      right: 2em;
+      font-size: 0.7em;
+      color: grey;
+      &.currentResults {
+        color: green;
+        font-weight: bold;
+      }
+    }
   }
   &_searchButton {
     margin-left: 0.3em !important;
