Отображение при результатах инфо о подкорпусе, кол-ве совпадений
и первой поисковой единицы.

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -140,6 +140,9 @@ $borderWidth: 0.3em;
   &_video {
     border-bottom: 1px solid $bmppBorderColor;
     background-color: #eee;
+    display: flex;
+    height: 192px !important;
+    flex: 0 0 auto;
   }
   &_results {
     overflow-y: scroll;
