--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -150,6 +150,16 @@ $borderWidth: 0.3em;
   }
 }
 
+.bmpp-videoCurtain {
+  position: absolute;
+  top: -1em;
+  bottom: -1em;
+  left: 0;
+  right: 0;
+  background-color: rgba(0,0,0,1);
+  z-index: 1001;
+}
+
 .bmpp-resultsInfo {
   max-width: 40em;
   padding: 0.7em 1em;
