--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -157,7 +157,36 @@ $borderWidth: 0.3em;
   left: 0;
   right: 0;
   background-color: rgba(0,0,0,1);
+  background: radial-gradient(
+    ellipse at top right,
+    rgba(0,120,0,1) 0%,
+    rgba(0,36,0,1) 100%);
   z-index: 1001;
+}
+
+.bmpp-videoLoader {
+  z-index: 10001;
+  visibility: visible;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -1.5em 0 0 -1.5em;
+  width: 3em;
+  height: 3em;
+  animation: segment-spin .6s linear;
+  animation-name: segment-spin;
+  animation-duration: .6s;
+  animation-timing-function: linear;
+  animation-delay: 0s;
+  animation-iteration-count: infinite;
+  animation-direction: normal;
+  animation-fill-mode: none;
+  animation-play-state: running;
+  animation-iteration-count: infinite;
+  border-radius: 100rem;
+  border-width: .25em;
+  border-style: solid;
+  border-color: #ffcc00 #880088 #008800 #008800cc;
 }
 
 .bmpp-resultsInfo {
