--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -511,6 +511,13 @@ $borderWidth: 0.3em;
     padding: 0.5em 0 0 0;
     margin: 0.5em 0 0 0;
   }
+  & .bmpp-recordLabel {
+    position: absolute !important;
+    right: 1em;
+    &.bmpp-initialRecordLabel {
+      top: 1em;
+    }
+  }
   & .bmpp-unitValue {
     text-align: right;
     color: green;
