--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -6,6 +6,8 @@ $black: #1c1b1d;
 $sidePaneWidth: 14vw;
 $mainWaitWidth: 86vw; /* = 100vw - $sidePaneWidth */
 $borderWidth: 0.3em;
+$videoWidth: 342px;
+$videoHeight: 193px;
 
 .bmpp-uiLayout {
   display: flex;
@@ -141,7 +143,7 @@ $borderWidth: 0.3em;
     border-bottom: 1px solid $bmppBorderColor;
     background-color: white;
     display: flex;
-    height: 193px !important;
+    height: $videoHeight !important;
     flex: 0 0 auto;
     overflow: hidden;
   }
@@ -153,8 +155,8 @@ $borderWidth: 0.3em;
 #bmpp-videoPlayer {
   flex: 0 0 auto;
   position: relative;
-  width: 342px;
-  height: 192px;
+  width: $videoWidth;
+  height: $videoHeight;
 }
 
 .bmpp-videoCurtain {
