bugfix: Отсутствие левых или правых контекстов ломает интерфейс

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -540,6 +540,7 @@ $videoHeight: 193px;
   }
   & .bmpp-transcription {
     cursor: pointer;
+    padding-right: 7em;
   }
   & .bmpp-context {
     color: grey;
