--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -514,12 +514,12 @@ $videoHeight: 193px;
 .bmpp-searchResult {
   width: 100%;
   display: grid;
-  grid-template-columns: auto 1fr;
+  grid-template-columns: auto auto auto 1fr;
   column-gap: 0.66em;
   align-items: baseline;
 
   & .divider {
-    grid-column: 1 / span 2;
+    grid-column: 1 / span 4;
     border: none;
     border-top: 1px solid $bmppBorderColor;
     padding: 0.5em 0 0 0;
@@ -545,6 +545,11 @@ $videoHeight: 193px;
   & .bmpp-context {
     color: grey;
     cursor: auto !important;
+  }
+  & .bmpp-time {
+    font-size: smaller;
+    color: grey;
+    text-align: right;
   }
 }
 
