Отображение номеров записей при каждом совпадении, для первого
совпадения из конкретной записи без прозрачности, для последующих
с полупрозрачностью.

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -531,6 +531,9 @@ $videoHeight: 193px;
     &.bmpp-initialRecordLabel {
       top: 1em;
     }
+    &.transparent {
+      opacity: 0.2;
+    }
   }
   & .bmpp-unitValue {
     text-align: right;
