bugfix: Видео окно перемещалось при прокрутке результатов в Firefox

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -138,6 +138,7 @@ $videoHeight: 193px;
   display: flex;
   flex-direction: column;
   align-items: stretch;
+  overflow: hidden;
 
   &_video {
     border-bottom: 1px solid $bmppBorderColor;
