Колбэки запроса должны проверять, что запрос не отменен
* Кнопка отмена запроса должна располагаться на отдном и том же
расстоянии от бегунка в независимости от высоты окна браузера.

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -48,7 +48,7 @@ $videoHeight: 193px;
     $colorChannels: 219, 40, 40;
     flex: none;
     position: absolute;
-    top: 40% !important;
+    top: calc(33.33% + 4em) !important;
     z-index: 1000;
     background-color: rgba(255, 255, 255, 1) !important;
     color: rgba($colorChannels, 0.5) !important;
