В названиях свойств и отношений, в справочной информации к ним,
в названиях значений списочных свойств можно указывать шаблоны подстановки
порядковых номеров единиц поиска в дереве запроса.

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -557,6 +557,9 @@ $videoHeight: 193px;
   &.clickable {
     cursor: copy;
   }
+  & .ui.circular.label {
+    background-color: #ccc;
+  }
 }
 
 .bmpp-bannerPropname {
