--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -419,52 +419,14 @@ $videoHeight: 193px;
   }
 }
 
-.bmpp-queryDistances {
+.bmpp-relationsFormula1 {
   margin: 1em auto !important;
   position: relative;
+  padding-bottom: 2.6em !important;
 
-  &--toOtherElement {
-    margin-top: 3em !important;
-  }
-
-  .bmpp-queryDistance {
-    min-height: 4em;
-
-    & .ui.form {
-      display: flex;
-      flex-wrap: wrap;
-      align-items: baseline;
-
-      & .field {
-        margin-right: 1em;
-        &.bmpp-units {
-          width: 8em !important;
-        }
-        &.bmpp-points {
-          width: 14em !important;
-        }
-      }
-
-      & .bmpp-units .text {
-        border-bottom: 1px grey dashed !important;
-      }
-
-      & input[type="number"] {
-        width: 6em !important;
-      }
-
-      & .ui.selection.dropdown {
-        height: 2em !important;
-        padding-top: .5em !important;
-      }
-    }
-  }
-
-  .bmpp-queryDistanceHelp {
-    position: absolute;
-    top: 1em !important;
-    right: .5em !important;
-  }
+}
+.bmpp-relationsFormula2 {
+  margin-top: 3em !important;
 }
 
 .bmpp-subcorpusForm {
