Сеть запроса вместо дерева запроса
Добавляются и удаляются узлы-ссылки на другие узлы поискового
запроса. Теперь возможно составить запрос, где отношениями связаны
не только, например, единицы 1 и 2, с одной стороны, и 2 и 3, с другой,
но и 1 и 3.

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -348,6 +348,20 @@ $videoHeight: 193px;
 
 .bmpp-queryElement {
   min-height: 8em;
+
+  &.tertiary {
+    min-height: 3.5em;
+
+    & .ui.basic.icon.button.bmpp-removeButton {
+      & .icon {
+        color: #aaa !important;
+      }
+
+      &:hover .icon {
+        color: $red !important;
+      }
+    }
+  }
 }
 
 .bmpp-number {
